force-app/main/default/objects/Term_Publish__e/Term_Publish__e.object-meta.xml
<CustomObject>
    <label>Term Publish</label>
    <pluralLabel>Term Publishes</pluralLabel>
</CustomObject>