force-app/main/default/objects/Term_Publish__e/fields/Is_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit</label>
    <type>Checkbox</type>
</CustomField>