force-app/main/default/objects/Term_Publish__e/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>