force-app/main/default/objects/Term_Publish__e/fields/Term_Order__c.field-meta.xml
<CustomField>
    <fullName>Term_Order__c</fullName>
    <label>Term Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>